k8s/bankapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-backend
  namespace: bankapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp-backend
  template:
    metadata:
      labels:
        app: bankapp-backend
    spec:
      containers:
        - name: bankapp-backend
          image: 747938282480.dkr.ecr.eu-west-1.amazonaws.com/bankapp-backend:latest
          ports:
            - containerPort: 8080
