k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: bankapp-deployment
  namespace: bankapp-ns

spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp

  template:
    metadata:
      name: bankapp-pod
      namespace: bankapp-ns
      labels:
        app: bankapp

    spec:
      containers:
      - name: bankapp-container
        image: gurleen16/springboot-bankapp:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
