k8s/bankapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-backend
  namespace: bankapp
spec:
  type: ClusterIP
  selector:
    app: bankapp-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
