k8s/mysql-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
  namespace: bankapp-ns
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
