k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: bankapp-svc
  namespace: bankapp-ns

spec:
  selector:
    app: bankapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
